Fixed bug on game start in Microsoft Edge & corrected score panel display issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,15 +71,16 @@ h2 {
 	font-size: 0.9em;
     text-align: left;
     width: 100%;
-    margin-bottom: 0.5em;
     line-height: 2em;
+    transition: all 0.3s ease;
 }
 
 .stars {
     padding: 0;
     margin: 0 5px 0 0;
 	list-style: none;
-	margin-left: 1em;
+	margin-left: 0.5em;
+	transition: all 0.3s ease;
 }
 
 .stars li {
@@ -110,7 +111,7 @@ h2 {
 }
 
 .moves {
-	margin-left: 0.5em;
+	margin-left: 0.3em;
 }
 
 .timer {
@@ -125,8 +126,8 @@ h2 {
 	background-image: url('../img/restart.svg'); 
 	background-size: contain;
 	background-repeat: no-repeat;
-	margin-left: 1em;
-	margin-right: 1em;
+	margin-left: 0.5em;
+	margin-right: 0.5em;
     float: right;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -410,6 +411,19 @@ h2 {
 		min-height: 90px;
 		transition: all 0.3s ease;
 	}
+
+	.moves {
+		margin-left: 0.5em;
+	}
+
+	#restart {
+		margin-left: 1em;
+		margin-right: 2em;
+	}
+
+	.stars {
+		margin-left: 2em;
+	}
 }
 
 @media screen and (min-width: 480px) {
@@ -428,6 +442,10 @@ h2 {
 
 	.header-container {
 		margin-top: 35px;
+	}
+
+	.score-panel {
+		margin-bottom: 0.5em
 	}
 
 	.card {
